--- a/clase_practica_1.html
+++ b/clase_practica_1.html
@@ -35,17 +35,15 @@
             loop hace que nunca termine
             type se usa para determina el tipo de entrada que se va a utilizar-->
 
-
             </video> 
             <p>
                 Lorem ipsum dolor sit amet, <br>
                 consectetur adipiscing elit, sed do eiusmod <br>
                 tempor incididunt ut labore et dolore magna aliqua. <br>
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
-                laboris nisi ut aliquip ex ea commodo consequat. Duis <br>
-                aute irure dolor in reprehenderit in voluptate velit es. <br>
+                laboris nisi ut aliquip ex ea commodo consequat. <br>
             </p>
-            <button>click</button>
+            <button></button>
         </section>
         <footer>  <!-- funciona como un section-->
 
