--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
 
     <body>
-      
+        
         <div class="menu">  <!-- se emplesa para definir un bloque de contenido o sección de la página -->
             <nav >  <!-- la clase se puede repetir -->
                 <!-- nav genera unna sección de una página 
                 cuyo propósito es proporcionar enlaces de navegación -->
-                <img src="assets/img/descarga.png" alt="foto UCEMA"> <!-- height y width 
+                <img src="assets/img/descarga.png" alt="logo"> <!-- height y width 
                     establece el tamaño en pixeles -->
                 <ul>  <!-- lista desordeada -->
                   <li> <!-- cada linea de la lista desordenada  -->
@@ -43,7 +43,6 @@
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
                 laboris nisi ut aliquip ex ea commodo consequat. <br>
             </p>
-            <button></button>
         </section>
         <footer>  <!-- funciona como un section-->
 
