--- a/index.html
+++ b/index.html
@@ -34,6 +34,53 @@
            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
       </div>
     </div>
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            Cafetería
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Café $300<br>Descafeinado $490<br>Cortado en vasito $360<br>
+            Café doble o con leche $490<br>Cappuccino $490<br>Cappuccino Super $650<br>Vainilla latte $600<br>
+            Caramel latte $570<br>Mocca latte $600<br>
+            <br>Extra size $110 - Extra shot $110<br>Extra Descafeinado $110</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Otras bebidas
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">​Jugo exprimido de naranja $400<br>Limonada clásica $350<br>
+            Limonada de menta y jengibre $370<br>Jugo de naranja, frutillas, banana y yoghurt 
+            descremado de vainilla $420<br>Submarino $410
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Brunch
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body"><strong>Dulces</strong><br> 
+            Brownie de dulce de leche y merengue $490 <br> 
+            ​Cheesecake classic $640 <br>Cheesecake Oreo $640 <br> 
+            Cheesecake Maracuyá $720<br>Chocotorta $620<br>Yoghurt con granola $650<br>
+            Muffin de vainilla $280<br>​Scon de queso $280<br>Croissant aux amandes $560<br>
+          <strong>Salado</strong><br>
+          Sandwich de salmón ahumado rúcula y huevos tibios en pan con semillas de amapola $3000<br>
+          Huevos revueltos con champignons, espinaca, tomate, ajo, zanahoria y queso feta. $970<br>
+          Tostó de pan integral con palta y huevo poché $1070<br>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <section class="container-xlg">
       <h5><b>Dejanos tu opinión</b></h5>
