--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="row">
       <div class="col-md-2">
-      <a href="#" > <img src="assets/img/tasa3.png" alt="logo" width="80px" ></a></div>
+      <a href="#" > <img src="assets/img/Logo cafetería y postres natural café y verde.png" alt="logo" width="110px" ></a></div>
       <div class="col-md-3" id="menu"><a href="#"> <strong> Sobre nosotros</strong></a></div>
       <div class="col-md-3" id="menu"><a href="#"> <strong>Productos</strong></a></div>
       <div class="col-md-3" id="menu"><a href="#"><strong>Contacto</strong></a></div>
