--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -12,18 +12,46 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/007848c7cb.js" crossorigin="anonymous"></script>
-    <title>Staruzz</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Belle vie</title>
   </head>
   <body>
-    <div class="row">
+    <section class="inicio"><div class="container">
+      <div class="row">
       <div class="col-md-2">
       <a href="#" > <img src="assets/img/Logo cafetería y postres natural café y verde.png" alt="logo" width="110px" ></a></div>
       <div class="col-md-3" id="menu"><a href="#"> <strong> Sobre nosotros</strong></a></div>
       <div class="col-md-3" id="menu"><a href="#"> <strong>Productos</strong></a></div>
       <div class="col-md-3" id="menu"><a href="#"><strong>Contacto</strong></a></div>
+    </div></div></section>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/slides/primer1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/slides/segundo2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/slides/tercero3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    
-    <div id="info" class="row">
+    <section id="historia"> <div class="container">
+      <div id="info" class="row">
       <div class="col-md-6"><img src="assets/img/cafeteria.png" alt="cafeteria" width="90%"></div>
       <div class="col-md-5">
         <div class="row"><b>Nuestra historia</b></div>
@@ -34,6 +62,8 @@
            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
       </div>
     </div>
+    </div></section>
+    <section class="acordion"><div class="container">
     <div class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
@@ -80,9 +110,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div></div></section>
 
-    <section class="container-xlg">
+    <section class="formulario"> <div class="container">
       <h5><b>Dejanos tu opinión</b></h5>
       <form>
         <div class="mb-3">
@@ -103,7 +133,7 @@
           <input type="checkbox" name="info">
         </div>
         <button type="submit">Enviar</button>
-      </form>
+      </form></div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
