--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/007848c7cb.js" crossorigin="anonymous"></script>
+    <!-- hoja estilos -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- animacion -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Belle vie</title>
   </head>
   <body>
@@ -20,9 +23,9 @@
       <div class="row">
       <div class="col-md-2">
       <a href="#" > <img src="assets/img/Logo cafetería y postres natural café y verde.png" alt="logo" width="110px" ></a></div>
-      <div class="col-md-3" id="menu"><a href="#"> <strong> Sobre nosotros</strong></a></div>
-      <div class="col-md-3" id="menu"><a href="#"> <strong>Productos</strong></a></div>
-      <div class="col-md-3" id="menu"><a href="#"><strong>Contacto</strong></a></div>
+      <div class="col-md-3" id="menu"><a href="#historia"> <strong> Sobre nosotros</strong></a></div>
+      <div class="col-md-3" id="menu"><a href="#productos"> <strong>Productos</strong></a></div>
+      <div class="col-md-3" id="menu"><a href="#contacto"><strong>Contacto</strong></a></div>
     </div></div></section>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -54,7 +57,7 @@
       <div id="info" class="row">
       <div class="col-md-6"><img src="assets/img/cafeteria.png" alt="cafeteria" width="90%"></div>
       <div class="col-md-5">
-        <div class="row"><b>Nuestra historia</b></div>
+        <div class="row" ><h4><b>Nuestra historia</h4></b></div>
         <div class="row"><p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
           doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore 
           veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
@@ -62,13 +65,15 @@
            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
       </div>
     </div>
+    <hr>
     </div></section>
-    <section class="acordion"><div class="container">
+    <section class="acordion" id="productos"><div class="container">
+      <h4><b>Nuestros productos</b></h4>
     <div class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-            Cafetería
+            <h5>Cafetería</h5>
           </button>
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -81,7 +86,7 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-            Otras bebidas
+            <h5>Otras bebidas</h5>
           </button>
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -94,7 +99,7 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-            Brunch
+            <h5>Brunch</h5>
           </button>
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
@@ -110,10 +115,13 @@
           </div>
         </div>
       </div>
+      <br><hr>
     </div></div></section>
 
-    <section class="formulario"> <div class="container">
-      <h5><b>Dejanos tu opinión</b></h5>
+    <section class="formulario" id="contacto"> <div class="container"><div class="row">
+      <div class="col-md-6"><img src="assets/img/pexels-helena-lopes-1015568.jpg" alt="" width="90%"></div>
+      <div class="col-md-5">
+      <h4><b>Dejanos tu opinión</b></h4><br>
       <form>
         <div class="mb-3">
           <label for="nombre">Nombre:</label>
@@ -131,14 +139,14 @@
         <div>
           <label for="info">Quiero recibir información</label>
           <input type="checkbox" name="info">
-        </div>
+        </div> <br>
         <button type="submit">Enviar</button>
-      </form></div>
+      </form></div></div></div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
   <footer>
-    <div class="pie"><a href="#">
-    <i class="fa-solid fa-share fa-1x" ></i></a></div>
+    <div id="pie" class="container" ><a href="#">
+    <i class="fa-solid fa-share fa-2x" ></i></a></div>
   </footer>
 </html>
