--- a/index.html
+++ b/index.html
@@ -19,40 +19,40 @@
     <title>Belle vie</title>
   </head>
   <body>
-    <section class="inicio"><div class="container">
-      <div class="row">
-      <div class="col-md-2">
-      <a href="#" > <img src="assets/img/Logo cafetería y postres natural café y verde.png" alt="logo" width="110px" ></a></div>
-      <div class="col-md-3" id="menu"><a href="#historia"> <strong> Sobre nosotros</strong></a></div>
-      <div class="col-md-3" id="menu"><a href="#productos"> <strong>Productos</strong></a></div>
-      <div class="col-md-3" id="menu"><a href="#contacto"><strong>Contacto</strong></a></div>
-    </div></div></section>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+  <header id="header" class="fixed-top d-flex align-items-cente">
+      <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
+  
+        <h1 class="logo me-auto me-lg-0"><a href="index.html">Belle vie</a></h1>
+        <nav id="navbar" class="navbar order-last order-lg-0">
+          <ul>
+            <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+            <li><a class="nav-link scrollto" href="#historia">Sobre nosotros</a></li>
+            <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
+            <li><a class="nav-link scrollto" href="#productos">Productos</a></li>
+            <li><a class="nav-link scrollto" href="#reservas">Reservas</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/img/slides/primer1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/slides/segundo2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/slides/tercero3.jpg" class="d-block w-100" alt="...">
+    </header>
+
+    <section id="hero" class="d-flex align-items-center">
+      <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
+        <div class="row">
+          <div class="col-lg-8">
+            <h1>Bienvenido a <span>Belle vie</span></h1>
+            <h2>Las cosas ricas te dan felicidad!</h2>
+  
+            <div class="btns">
+              <a href="#productos" class="btn-menu animated fadeInUp scrollto">Menu</a>
+              <a href="#reservas" class="btn-book animated fadeInUp scrollto">Reservas</a>
+            </div>
+          </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+    </section>
+
     <section id="historia"> <div class="container">
       <div id="info" class="row">
       <div class="col-md-6"><img src="assets/img/cafeteria.png" alt="cafeteria" width="90%"></div>
@@ -65,9 +65,10 @@
            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
       </div>
     </div>
-    <hr>
     </div></section>
-    <section class="acordion" id="productos"><div class="container">
+
+
+    <section class="acordion" id="productos"><br><div class="container">
       <h4><b>Nuestros productos</b></h4>
     <div class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
@@ -118,10 +119,10 @@
       <br><hr>
     </div></div></section>
 
-    <section class="formulario" id="contacto"> <div class="container"><div class="row">
+    <section class="formulario" id="reservas"> <div class="container"><div class="row">
       <div class="col-md-6"><img src="assets/img/pexels-helena-lopes-1015568.jpg" alt="" width="90%"></div>
       <div class="col-md-5">
-      <h4><b>Dejanos tu opinión</b></h4><br>
+      <h4><b>Reservas</b></h4><br>
       <form>
         <div class="mb-3">
           <label for="nombre">Nombre:</label>
@@ -145,6 +146,7 @@
     </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
   </body>
   
   <footer>
