--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Las cosas ricas te dan felicidad!</h2>
   
             <div class="btns">
-              <a href="#productos" class="btn-menu animated fadeInUp scrollto">Menu</a>
+              <a href="#menu" class="btn-menu animated fadeInUp scrollto">Menu</a>
               <a href="#reservas" class="btn-book animated fadeInUp scrollto">Reservas</a>
             </div>
           </div>
@@ -119,7 +119,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cafe">
-            <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/lagrima.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Lágrima</a><span>$440</span>
             </div>
@@ -129,7 +129,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cafe">
-            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/icedlatte.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Iced latte</a><span>$530</span>
             </div>
@@ -139,7 +139,7 @@
           </div>
           <div class="col-lg-6 menu-item filter-bebidas">
 
-            <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/matcha.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Matcha latte</a><span>$500</span>
             </div>
@@ -149,7 +149,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-bebidas">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/chai.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Chai latte</a><span>$450</span>
             </div>
@@ -159,7 +159,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-bebidas">
-            <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/sumarino.jpeg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Submarino</a><span>$600</span>
             </div>
@@ -169,7 +169,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-bebidas">
-            <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/verde.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Chinese Gooseberry</a><span>$12.95</span>
             </div>
