--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
       <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
   
         <h1 class="logo me-auto me-lg-0"><a href="index.html">Belle vie</a></h1>
-        <nav id="navbar" class="navbar order-last order-lg-0">
-          <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
-            <li><a class="nav-link scrollto" href="#historia">Sobre nosotros</a></li>
-            <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
-            <li><a class="nav-link scrollto" href="#productos">Productos</a></li>
-            <li><a class="nav-link scrollto" href="#reservas">Reservas</a></li>
-          </ul>
-          <!-- <i class="bi bi-list mobile-nav-toggle"></i> -->
+        <nav id="navbar" class="navbar navbar-expand-lg order-last order-lg-0">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link scrollto" href="#historia">Sobre nosotros</a></li>
+            <li class="nav-item"><a class="nav-link scrollto" href="#menu">Menu</a></li>
+            <li class="nav-item"><a class="nav-link scrollto" href="#productos">Productos</a></li>
+            <li class="nav-item"><a class="nav-link scrollto" href="#reservas">Reservas</a></li>
+          </ul></div>
         </nav>
       </div>
     </header>
