--- a/index.html
+++ b/index.html
@@ -80,18 +80,20 @@
 
         <div class="row" >
           <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">Todo</li>
-              <li data-filter=".filter-cafe">Cafetería</li>
-              <li data-filter=".filter-bebidas">Otras bebidas</li>
-              <li data-filter=".filter-brunch">Brunch</li>
+            <div id="myBtnContainer">
+            <ul id="menu-filters">
+              <li><button class="btn active" onclick="filterSelection('all')">Todo</button></li>
+              <li> <button class="btn" onclick="filterSelection('cafeteria')">Cafetería</button></li>
+              <li><button class="btn" onclick="filterSelection('bebidas')">Otras bebidas</button></li>
+              <li><button class="btn" onclick="filterSelection('brunch')">Brunch</button></li>
             </ul>
+          </div>
           </div>
         </div>
 
         <div class="row menu-container">
 
-          <div class="col-lg-6 menu-item filter-cafe">
+          <div class="col-lg-6 menu-item filterDiv cafeteria" >
             <img src="assets/img/menu/cafe.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Café</a><span>$300</span>
@@ -101,7 +103,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-cafe">
+          <div class="col-lg-6 menu-item filterDiv cafeteria">
             <img src="assets/img/menu/cortado2.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Café cortado</a><span>$350</span>
@@ -111,7 +113,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-cafe">
+          <div class="col-lg-6 menu-item filterDiv cafeteria">
             <img src="assets/img/menu/cappuccino2.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cappuccino</a><span>$420</span>
@@ -121,7 +123,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-cafe">
+          <div class="col-lg-6 menu-item filterDiv cafeteria">
             <img src="assets/img/menu/lagrima.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Lágrima</a><span>$440</span>
@@ -131,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-cafe">
+          <div class="col-lg-6 menu-item filterDiv cafeteria">
             <img src="assets/img/menu/icedlatte.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Iced latte</a><span>$530</span>
@@ -140,7 +142,7 @@
               Café con leche frío, con hielo.
             </div>
           </div>
-          <div class="col-lg-6 menu-item filter-bebidas">
+          <div class="col-lg-6 menu-item filterDiv bebidas">
 
             <img src="assets/img/menu/matcha.jpg" class="menu-img" alt="">
             <div class="menu-content">
@@ -151,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-bebidas">
+          <div class="col-lg-6 menu-item filterDiv bebidas">
             <img src="assets/img/menu/chai.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Chai latte</a><span>$450</span>
@@ -161,7 +163,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-bebidas">
+          <div class="col-lg-6 menu-item filterDiv bebidas">
             <img src="assets/img/menu/sumarino.jpeg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Submarino</a><span>$600</span>
@@ -171,17 +173,17 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-bebidas">
+          <div class="col-lg-6 menu-item filterDiv bebidas">
             <img src="assets/img/menu/verde.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Chinese Gooseberry</a><span>$12.95</span>
+              <a href="#">Chinese Gooseberry</a><span>$420</span>
             </div>
             <div class="menu-ingredients">
               Jugo especial de kiwi, naranja, jengibre, hielo y azúcar orgánica.
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-brunch">
+          <div class="col-lg-6 menu-item filterDiv brunch">
             <img src="assets/img/menu/cookie.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Mega cookie</a><span>$540</span>
@@ -191,7 +193,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-brunch">
+          <div class="col-lg-6 menu-item filterDiv brunch">
             <img src="assets/img/menu/carrot.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Carrot Cake</a><span>$510</span>
@@ -201,7 +203,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-brunch">
+          <div class="col-lg-6 menu-item filterDiv brunch">
             <img src="assets/img/menu/croissant.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Croissant Clásico</a><span>$680</span>
@@ -211,7 +213,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-brunch">
+          <div class="col-lg-6 menu-item filterDiv brunch">
             <img src="assets/img/menu/brownie.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Brownie Clásico</a><span>$520</span>
@@ -233,7 +235,7 @@
       <h4><b>Reservas</b></h4><br>
       <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
-          <div class="col-lg-4 col-md-6 form-group">
+          <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
             <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Por favor ingrese al menos 4 caracteres">
             <div class="validate"></div>
           </div>
@@ -241,7 +243,7 @@
             <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Por favor ingrese un email válido">
             <div class="validate"></div>
           </div>
-          <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
+          <div class="col-lg-4 col-md-6 form-group mt-3">
             <input type="text" class="form-control" name="phone" id="phone" placeholder="Celular" data-rule="minlen:4" data-msg="Por favor ingrese al menos 4 caracteres">
             <div class="validate"></div>
           </div>
