--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
   </head>
   <body>
 
-  <header id="header" class="fixed-top d-flex align-items-cente">
-      <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
+ <header id="header" class="fixed-top d-flex align-items-cente">
+     <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
   
         <h1 class="logo me-auto me-lg-0"><a href="index.html">Belle vie</a></h1>
-        <nav id="navbar" class="navbar navbar-expand-lg order-last order-lg-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <nav class="navbar navbar-expand-lg navbar-dark .bg-transparent order-last order-lg-0" id="navbar1">
+        <div class="container-fluid" id="expand">
+          <button id="boton-menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="#historia">Sobre nosotros</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="#menu">Menu</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="#productos">Productos</a></li>
-            <li class="nav-item"><a class="nav-link scrollto" href="#reservas">Reservas</a></li>
-          </ul></div>
-        </nav>
-      </div>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="#hero">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#historia">Sobre nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+              <li class="nav-item"><a class="nav-link" href="#reservas">Reservas</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
     </header>
 
     <section id="hero" class="d-flex align-items-center">
