--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   </head>
   <body>
 
- <header id="header" class="fixed-top d-flex align-items-cente">
+  <header id="header" class="fixed-top d-flex align-items-cente">
      <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
-  
-        <h1 class="logo me-auto me-lg-0"><a href="index.html">Belle vie</a></h1>
-      <nav class="navbar navbar-expand-lg navbar-dark .bg-transparent order-last order-lg-0" id="navbar1">
+        <h1 class="logo me-auto me-lg-0">
+          <a href="index.html">Belle vie</a></h1>
+        <nav class="navbar navbar-expand-lg navbar-dark .bg-transparent order-last order-lg-0" id="navbar1">
         <div class="container-fluid" id="expand">
           <button id="boton-menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,28 +39,27 @@
             </ul>
           </div>
         </div>
-      </nav>
-    </div>
-    </header>
+        </nav>
+      </div>
+  </header>
 
-    <section id="hero" class="d-flex align-items-center">
-      <div class="container position-relative text-center text-lg-start" >
-        <div class="row">
-          <div class="col-lg-8">
-            <h1>Bienvenido a <span>Belle vie</span></h1>
-            <h2>Las cosas ricas te dan felicidad!</h2>
-  
+  <section id="hero" class="d-flex align-items-center">
+    <div class="container position-relative text-center text-lg-start" >
+      <div class="row">
+        <div class="col-lg-8">
+          <h1>Bienvenido a <span>Belle vie</span></h1>
+          <h2>Las cosas ricas te dan felicidad!</h2>
             <div class="btns">
               <a href="#menu" class="btn-menu animated fadeInUp scrollto">Menu</a>
               <a href="#reservas" class="btn-book animated fadeInUp scrollto">Reservas</a>
             </div>
-          </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="historia"> <div class="container">
-      <div id="info" class="row">
+  <section id="historia"> <div class="container">
+    <div id="info" class="row">
       <div class="col-md-6"><img src="assets/img/cafeteria.png" alt="cafeteria" width="90%"></div>
       <div class="col-md-5">
         <div class="row" ><h4><b>Nuestra historia</h4></b></div>
@@ -71,177 +70,164 @@
            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
       </div>
     </div>
-    </div></section>
+    </div>
+  </section>
 
-    <section id="menu" class="menu section-bg">
-      <div class="container" >
+  <section id="menu" class="menu section-bg">
+    <div class="container" >
 
-        <div class="section-title">
-          <h2>Menu</h2>
-        </div>
-
-        <div class="row" >
-          <div class="col-lg-12 d-flex justify-content-center">
-            <div id="myBtnContainer">
-            <ul id="menu-filters">
-              <li><button class="btn active" onclick="filterSelection('all')">Todo</button></li>
-              <li> <button class="btn" onclick="filterSelection('cafeteria')">Cafetería</button></li>
-              <li><button class="btn" onclick="filterSelection('bebidas')">Otras bebidas</button></li>
-              <li><button class="btn" onclick="filterSelection('brunch')">Brunch</button></li>
-            </ul>
-          </div>
-          </div>
-        </div>
-
-        <div class="row menu-container">
-
-          <div class="col-lg-6 menu-item filterDiv cafeteria" >
-            <img src="assets/img/menu/cafe.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Café</a><span>$300</span>
-            </div>
-            <div class="menu-ingredients">
-              Café santos bourbon de brasil a base de 60 ml de café expresso y 60 ml agua, 120 ml.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv cafeteria">
-            <img src="assets/img/menu/cortado2.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Café cortado</a><span>$350</span>
-            </div>
-            <div class="menu-ingredients">
-              Expresso doble cortado con leche espumada.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv cafeteria">
-            <img src="assets/img/menu/cappuccino2.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Cappuccino</a><span>$420</span>
-            </div>
-            <div class="menu-ingredients">
-              Expresso doble con leche espumada, cacao amargo y canela.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv cafeteria">
-            <img src="assets/img/menu/lagrima.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Lágrima</a><span>$440</span>
-            </div>
-            <div class="menu-ingredients">
-              Leche texturizada con un shot de café expresso.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv cafeteria">
-            <img src="assets/img/menu/icedlatte.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Iced latte</a><span>$530</span>
-            </div>
-            <div class="menu-ingredients">
-              Café con leche frío, con hielo.
-            </div>
-          </div>
-          <div class="col-lg-6 menu-item filterDiv bebidas">
-
-            <img src="assets/img/menu/matcha.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Matcha latte</a><span>$500</span>
-            </div>
-            <div class="menu-ingredients">
-              Matcha con leche a elección.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv bebidas">
-            <img src="assets/img/menu/chai.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Chai latte</a><span>$450</span>
-            </div>
-            <div class="menu-ingredients">
-              Té negro con jengibre, canela, cardamomo, clavo de olor y anís. Con leche y hielo opcionalS.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv bebidas">
-            <img src="assets/img/menu/sumarino.jpeg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Submarino</a><span>$600</span>
-            </div>
-            <div class="menu-ingredients">
-              Leche caliente con una barra de chocolate amargo.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv bebidas">
-            <img src="assets/img/menu/verde.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Chinese Gooseberry</a><span>$420</span>
-            </div>
-            <div class="menu-ingredients">
-              Jugo especial de kiwi, naranja, jengibre, hielo y azúcar orgánica.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv brunch">
-            <img src="assets/img/menu/cookie.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Mega cookie</a><span>$540</span>
-            </div>
-            <div class="menu-ingredients">
-              Mega cookie con sabor a elección.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv brunch">
-            <img src="assets/img/menu/carrot.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Carrot Cake</a><span>$510</span>
-            </div>
-            <div class="menu-ingredients">
-              Espléndida torta humeda de zanahoria, porción individual.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv brunch">
-            <img src="assets/img/menu/croissant.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Croissant Clásico</a><span>$680</span>
-            </div>
-            <div class="menu-ingredients">
-              Mega croissant clásico relleno de jamón y queso.
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filterDiv brunch">
-            <img src="assets/img/menu/brownie.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Brownie Clásico</a><span>$520</span>
-            </div>
-            <div class="menu-ingredients">
-              Brownie de chocolate, frutos rojos, pasta de maní y nueces, porción individual.
-            </div>
-          </div>
-
-        </div>
-
+      <div class="section-title">
+        <h2>Menu</h2>
       </div>
-    </section>
-  
 
+      <div class="row menu-container">
+
+      <div class="col-lg-6 menu-item" >
+        <img src="assets/img/menu/cafe.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+              <a href="#">Café</a><span>$300</span>
+          </div>
+          <div class="menu-ingredients">
+            Café santos bourbon de brasil a base de 60 ml de café expresso y 60 ml agua, 120 ml.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/cortado2.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+              <a href="#">Café cortado</a><span>$350</span>
+          </div>
+          <div class="menu-ingredients">
+            Expresso doble cortado con leche espumada.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/cappuccino2.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Cappuccino</a><span>$420</span>
+          </div>
+          <div class="menu-ingredients">
+            Expresso doble con leche espumada, cacao amargo y canela.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/lagrima.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Lágrima</a><span>$440</span>
+          </div>
+          <div class="menu-ingredients">
+            Leche texturizada con un shot de café expresso.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/icedlatte.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Iced latte</a><span>$530</span>
+          </div>
+          <div class="menu-ingredients">
+            Café con leche frío, con hielo.
+          </div>
+      </div>
+      
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/matcha.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Matcha latte</a><span>$500</span>
+          </div>
+          <div class="menu-ingredients">
+            Matcha con leche a elección.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/chai.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Chai latte</a><span>$450</span>
+          </div>
+          <div class="menu-ingredients">
+            Té negro con jengibre, canela, cardamomo, clavo de olor y anís. Con leche y hielo opcionalS.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/sumarino.jpeg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Submarino</a><span>$600</span>
+          </div>
+          <div class="menu-ingredients">
+            Leche caliente con una barra de chocolate amargo.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/verde.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Chinese Gooseberry</a><span>$420</span>
+          </div>
+          <div class="menu-ingredients">
+            Jugo especial de kiwi, naranja, jengibre, hielo y azúcar orgánica.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/cookie.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Mega cookie</a><span>$540</span>
+          </div>
+          <div class="menu-ingredients">
+            Mega cookie con sabor a elección.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/carrot.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Carrot Cake</a><span>$510</span>
+          </div>
+          <div class="menu-ingredients">
+            Espléndida torta humeda de zanahoria, porción individual.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/croissant.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Croissant Clásico</a><span>$680</span>
+          </div>
+          <div class="menu-ingredients">
+            Mega croissant clásico relleno de jamón y queso.
+          </div>
+      </div>
+
+      <div class="col-lg-6 menu-item">
+        <img src="assets/img/menu/brownie.jpg" class="menu-img" alt="">
+          <div class="menu-content">
+            <a href="#">Brownie Clásico</a><span>$520</span>
+          </div>
+          <div class="menu-ingredients">
+            Brownie de chocolate, frutos rojos, pasta de maní y nueces, porción individual.
+          </div>
+      </div>
+    </div>
+    </div>
+    </section>
+
+    <!-- productos -->
+  
     <section class="formulario" id="reservas"> <br><hr><br><div class="container"><div class="row">
       <div class="col-md-6"><img src="assets/img/pexels-helena-lopes-1015568.jpg" alt="" width="90%"></div>
       <div class="col-md-5">
-      <h4><b>Reservas</b></h4><br>
+      <h4><b>Reservas</b></h4>
       <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
-          <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
+          <div class="col-lg-4 col-md-6 form-group mt-3">
             <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Por favor ingrese al menos 4 caracteres">
             <div class="validate"></div>
           </div>
-          <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
+          <div class="col-lg-4 col-md-6 form-group mt-3">
             <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Por favor ingrese un email válido">
             <div class="validate"></div>
           </div>
