--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <a href="#">Chai latte</a><span>$450</span>
           </div>
           <div class="menu-ingredients">
-            Té negro con jengibre, canela, cardamomo, clavo de olor y anís. Con leche y hielo opcionalS.
+            Té negro con jengibre, canela, cardamomo, clavo de olor y anís. Con leche y hielo opcional.
           </div>
       </div>
 
