--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
       <div class="col-md-6"><img src="assets/img/cafeteria.png" alt="cafeteria" width="90%"></div>
       <div class="col-md-5">
         <div class="row" ><h4><b>Nuestra historia</h4></b></div>
-        <div class="row"><p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
-          doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore 
-          veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-           ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
-           consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
+        <div class="row"><p>Abrimos nuestras puertas al público en 2014 y desde 2017
+          tostamos nuestro propio café, lo cuidamos desde la selección de sus granos,
+           hasta la taza, conservando el amor y el respeto que tenemos por
+            lo que hacemos, desde el primer día. Por eso nuestro café es ÚNICO.</p></div>
       </div>
     </div>
     </div>
